force-app/main/default/objects/OpportunityLineItem/fields/SAWO_ScheduleLineCategory__c.field-meta.xml
<CustomField>
    <fullName>SAWO_ScheduleLineCategory__c</fullName>
    <description>S4連携項目</description>
    <label>納入日程Cat.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Z0</fullName>
                <label>所要なし</label>
            </value>
            <value>
                <fullName>Z1</fullName>
                <label>所要あり</label>
            </value>
            <value>
                <fullName>Z2</fullName>
                <label>在庫引当</label>
            </value>
            <value>
                <fullName>Z3</fullName>
                <label>直送</label>
            </value>
            <value>
                <fullName>Z4</fullName>
                <label>無形サービス</label>
            </value>
            <value>
                <fullName>Z5</fullName>
                <label>無形サービス直送</label>
            </value>
            <value>
                <fullName>Z6</fullName>
                <label>有償支給 在庫</label>
            </value>
            <value>
                <fullName>Z7</fullName>
                <label>返品</label>
            </value>
            <value>
                <fullName>Z8</fullName>
                <label>有償支給 返品</label>
            </value>
            <value>
                <fullName>Z9</fullName>
                <label>在庫転送</label>
            </value>
            <value>
                <fullName>ZA</fullName>
                <label>会社間在庫転送</label>
            </value>
            <value>
                <fullName>ZB</fullName>
                <label>仕入返品</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>