force-app/main/default/objects/OpportunityLineItem/fields/SAWO_SeparateTableNo__c.field-meta.xml
<CustomField>
    <fullName>SAWO_SeparateTableNo__c</fullName>
    <description>輸管項目</description>
    <label>別表番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>