force-app/main/default/objects/OpportunityLineItem/fields/SAWO_ShippingInstructions__c.field-meta.xml
<CustomField>
    <fullName>SAWO_ShippingInstructions__c</fullName>
    <label>出荷指図</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>