force-app/main/default/objects/OpportunityLineItem/fields/SAWO_SortNo__c.field-meta.xml
<CustomField>
    <fullName>SAWO_SortNo__c</fullName>
    <label>並び順</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>