force-app/main/default/objects/OpportunityLineItem/fields/SAWO_Specification__c.field-meta.xml
<CustomField>
    <fullName>SAWO_Specification__c</fullName>
    <description>試薬で必要な項目</description>
    <label>仕様</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>