force-app/main/default/objects/OpportunityLineItem/fields/SAWO_SpecifiedDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>SAWO_SpecifiedDeliveryDate__c</fullName>
    <description>顧客の指定納期の日付</description>
    <label>指定納期</label>
    <type>Date</type>
</CustomField>