force-app/main/default/objects/OpportunityLineItem/fields/SAWO_StandardInternalContact__c.field-meta.xml
<CustomField>
    <fullName>SAWO_StandardInternalContact__c</fullName>
    <description>S4連携用項目</description>
    <label>通常(内部連絡用)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>