force-app/main/default/objects/OpportunityLineItem/fields/SAWO_StockNo_StartingNo__c.field-meta.xml
<CustomField>
    <fullName>SAWO_StockNo_StartingNo__c</fullName>
    <description>手配のための許可番号</description>
    <label>在庫認可No/先発認可No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>