force-app/main/default/objects/OpportunityLineItem/fields/SAWO_StorageLocation__c.field-meta.xml
<CustomField>
    <fullName>SAWO_StorageLocation__c</fullName>
    <description>S4連携項目　他受注に在庫が引き当てられないよう、受注の時点で指定しておく</description>
    <label>保管場所(STE)</label>
    <length>4</length>
    <type>Text</type>
</CustomField>