force-app/main/default/objects/OpportunityLineItem/fields/SAWO_TaxClassification__c.field-meta.xml
<CustomField>
    <fullName>SAWO_TaxClassification__c</fullName>
    <description>SAPの税区分</description>
    <label>税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A0</fullName>
            </value>
            <value>
                <fullName>A1</fullName>
            </value>
            <value>
                <fullName>A6</fullName>
            </value>
            <value>
                <fullName>A7</fullName>
            </value>
            <value>
                <fullName>A8</fullName>
            </value>
            <value>
                <fullName>A9</fullName>
            </value>
            <value>
                <fullName>AK</fullName>
            </value>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>M1</fullName>
            </value>
            <value>
                <fullName>N1</fullName>
            </value>
            <value>
                <fullName>N6</fullName>
            </value>
            <value>
                <fullName>N7</fullName>
            </value>
            <value>
                <fullName>NK</fullName>
            </value>
            <value>
                <fullName>V0</fullName>
            </value>
            <value>
                <fullName>V1</fullName>
            </value>
            <value>
                <fullName>V6</fullName>
            </value>
            <value>
                <fullName>V7</fullName>
            </value>
            <value>
                <fullName>V8</fullName>
            </value>
            <value>
                <fullName>V9</fullName>
            </value>
            <value>
                <fullName>VK</fullName>
            </value>
            <value>
                <fullName>VM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>