force-app/main/default/objects/OpportunityLineItem/fields/SAWO_TaxPercent__c.field-meta.xml
<CustomField>
    <fullName>SAWO_TaxPercent__c</fullName>
    <description>消費税の割合
同期された見積から取得</description>
    <formula>Opportunity.SyncedQuote.Consumption_Tax__c</formula>
    <label>消費税率</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>