force-app/main/default/objects/OpportunityLineItem/fields/SAWO_TaxPrice__c.field-meta.xml
<CustomField>
    <fullName>SAWO_TaxPrice__c</fullName>
    <description>合計金額×消費税率</description>
    <label>消費税</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>