force-app/main/default/objects/OpportunityLineItem/fields/SAWO_TC__c.field-meta.xml
<CustomField>
    <fullName>SAWO_TC__c</fullName>
    <label>ｘTC</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>