force-app/main/default/objects/OpportunityLineItem/fields/SAWO_TotalDiscountPercent__c.field-meta.xml
<CustomField>
    <fullName>SAWO_TotalDiscountPercent__c</fullName>
    <description>最終的な値引率</description>
    <label>トータル値引率（％）</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>