force-app/main/default/objects/OpportunityLineItem/fields/SAWO_TotalFrontPurchasePrice__c.field-meta.xml
<CustomField>
    <fullName>SAWO_TotalFrontPurchasePrice__c</fullName>
    <description>フロント仕入価格×数量</description>
    <formula>SAWO_FrontPurchasePrice__c  *  Quantity</formula>
    <label>総フロント仕入価格</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>