force-app/main/default/objects/OpportunityLineItem/fields/SAWO_TotalLocalCorporationTC__c.field-meta.xml
<CustomField>
    <fullName>SAWO_TotalLocalCorporationTC__c</fullName>
    <description>現法TC×数量</description>
    <formula>SAWO_LocalCorporationTC__c  *  Quantity</formula>
    <label>総現法TC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>