force-app/main/default/objects/OpportunityLineItem/fields/SAWO_TotalMC__c.field-meta.xml
<CustomField>
    <fullName>SAWO_TotalMC__c</fullName>
    <description>MC×数量</description>
    <formula>MC__c  *  Quantity</formula>
    <label>総MC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>