force-app/main/default/objects/OpportunityLineItem/fields/SAWO_TotalPrice__c.field-meta.xml
<CustomField>
    <fullName>SAWO_TotalPrice__c</fullName>
    <description>販売価格-明細値引</description>
    <label>合計金額</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>