force-app/main/default/objects/OpportunityLineItem/fields/SAWO_TotalTC__c.field-meta.xml
<CustomField>
    <fullName>SAWO_TotalTC__c</fullName>
    <formula>TC__c *  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>総TC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>