force-app/main/default/objects/OpportunityLineItem/fields/SAWO_UnitClassification__c.field-meta.xml
<CustomField>
    <fullName>SAWO_UnitClassification__c</fullName>
    <description>試薬で必要な項目</description>
    <label>単位区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>