force-app/main/default/objects/OpportunityLineItem/fields/SAWO_WBSElement__c.field-meta.xml
<CustomField>
    <fullName>SAWO_WBSElement__c</fullName>
    <description>S4連携用項目</description>
    <formula>IF( AND(SAWO_ItemNumber__c &gt; 0,
        OR(SAWO_PlantCode__c == &apos;1000&apos; ,SAWO_PlantCode__c == &apos;1010&apos;, SAWO_PlantCode__c == &apos;1020&apos; )  ), 
    &quot;01&quot; &amp; 
    IF(SAWO_PlantCode__c == &apos;1000&apos;,&apos;C&apos;,
    IF(SAWO_PlantCode__c == &apos;1010&apos;,&apos;N&apos;,
    IF(SAWO_PlantCode__c == &apos;1020&apos;,&apos;K&apos;,&apos;&apos; ) ) )
    &amp; Opportunity.OpportunityNo__c &amp; &quot;-&quot; &amp;
    LPAD(text(SAWO_ItemNumber__c), 3,&apos;0&apos;)
    ,&apos;&apos;
)</formula>
    <label>WBS要素</label>
    <type>Text</type>
</CustomField>