force-app/main/default/objects/OpportunityLineItem/fields/SeihinBunrui__c.field-meta.xml
<CustomField>
    <fullName>SeihinBunrui__c</fullName>
    <description>CAS用項目</description>
    <label>製品分類</label>
    <length>20</length>
    <type>Text</type>
</CustomField>