force-app/main/default/objects/OpportunityLineItem/fields/SeihinRyakusho__c.field-meta.xml
<CustomField>
    <fullName>SeihinRyakusho__c</fullName>
    <label>製品略称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>