force-app/main/default/objects/OpportunityLineItem/fields/SenkoTehai__c.field-meta.xml
<CustomField>
    <fullName>SenkoTehai__c</fullName>
    <defaultValue>false</defaultValue>
    <label>先行手配</label>
    <type>Checkbox</type>
</CustomField>