force-app/main/default/objects/OpportunityLineItem/fields/SenkoTehaiShoninZumi__c.field-meta.xml
<CustomField>
    <fullName>SenkoTehaiShoninZumi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>先行手配承認済</label>
    <type>Checkbox</type>
</CustomField>