force-app/main/default/objects/OpportunityLineItem/fields/Shiiresaki__c.field-meta.xml
<CustomField>
    <fullName>Shiiresaki__c</fullName>
    <description>CAS用項目</description>
    <label>仕入先</label>
    <length>40</length>
    <type>Text</type>
</CustomField>