force-app/main/default/objects/OpportunityLineItem/fields/ShikiriPrice__c.field-meta.xml
<CustomField>
    <fullName>ShikiriPrice__c</fullName>
    <label>X</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>