force-app/main/default/objects/OpportunityLineItem/fields/ShukkaRequestDate__c.field-meta.xml
<CustomField>
    <fullName>ShukkaRequestDate__c</fullName>
    <label>出荷要求日</label>
    <type>Date</type>
</CustomField>