force-app/main/default/objects/OpportunityLineItem/fields/SortNo__c.field-meta.xml
<CustomField>
    <fullName>SortNo__c</fullName>
    <label>並び順</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>