force-app/main/default/objects/OpportunityLineItem/fields/SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SortOrder__c</fullName>
    <label>Sort Order</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>