force-app/main/default/objects/OpportunityLineItem/fields/specialQuotationFlg__c.field-meta.xml
<CustomField>
    <fullName>specialQuotationFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>見積調書フラグ</label>
    <type>Checkbox</type>
</CustomField>