force-app/main/default/objects/OpportunityLineItem/fields/Specification__c.field-meta.xml
<CustomField>
    <fullName>Specification__c</fullName>
    <description>CAS用項目</description>
    <label>仕様</label>
    <length>40</length>
    <type>Text</type>
</CustomField>