force-app/main/default/objects/OpportunityLineItem/fields/SplitExecuteFlg__c.field-meta.xml
<CustomField>
    <fullName>SplitExecuteFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>按分実施フラグ</label>
    <type>Checkbox</type>
</CustomField>