force-app/main/default/objects/OpportunityLineItem/fields/StartMonth__c.field-meta.xml
<CustomField>
    <fullName>StartMonth__c</fullName>
    <label>開始月</label>
    <length>10</length>
    <type>Text</type>
</CustomField>