force-app/main/default/objects/OpportunityLineItem/fields/StatusDivision__c.field-meta.xml
<CustomField>
    <fullName>StatusDivision__c</fullName>
    <description>CAS用項目</description>
    <label>状態区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>引合</fullName>
                <default>true</default>
                <label>引合</label>
            </value>
            <value>
                <fullName>受注</fullName>
            </value>
            <value>
                <fullName>他決</fullName>
            </value>
            <value>
                <fullName>消滅</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>