force-app/main/default/objects/OpportunityLineItem/fields/SuetsukeKanryoDate__c.field-meta.xml
<CustomField>
    <fullName>SuetsukeKanryoDate__c</fullName>
    <label>据付完了日</label>
    <type>Date</type>
</CustomField>