force-app/main/default/objects/OpportunityLineItem/fields/SuetsukeStartDate__c.field-meta.xml
<CustomField>
    <fullName>SuetsukeStartDate__c</fullName>
    <label>据付開始日</label>
    <type>Date</type>
</CustomField>