force-app/main/default/objects/OpportunityLineItem/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <formula>PricebookEntry.Product2.SupplierName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>仕入先</label>
    <type>Text</type>
</CustomField>