force-app/main/default/objects/OpportunityLineItem/fields/SupplierAmount__c.field-meta.xml
<CustomField>
    <fullName>SupplierAmount__c</fullName>
    <label>仕入額(単価)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>