force-app/main/default/objects/OpportunityLineItem/fields/SupplierCheckErrorDescription__c.field-meta.xml
<CustomField>
    <fullName>SupplierCheckErrorDescription__c</fullName>
    <label>仕入先チェックエラー内容</label>
    <length>100</length>
    <type>Text</type>
</CustomField>