force-app/main/default/objects/OpportunityLineItem/fields/SupplierCheckResult__c.field-meta.xml
<CustomField>
    <fullName>SupplierCheckResult__c</fullName>
    <label>仕入先チェック結果</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>未チェック</fullName>
            </value>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>NG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>