force-app/main/default/objects/OpportunityLineItem/fields/SupplierCode__c.field-meta.xml
<CustomField>
    <fullName>SupplierCode__c</fullName>
    <label>仕入先コード</label>
    <length>100</length>
    <type>Text</type>
</CustomField>