force-app/main/default/objects/OpportunityLineItem/fields/TaketsuBikou__c.field-meta.xml
<CustomField>
    <fullName>TaketsuBikou__c</fullName>
    <description>CAS用項目</description>
    <label>他決備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>