force-app/main/default/objects/OpportunityLineItem/fields/TaketsuKingaku__c.field-meta.xml
<CustomField>
    <fullName>TaketsuKingaku__c</fullName>
    <label>他決金額</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>