force-app/main/default/objects/OpportunityLineItem/fields/TaketsuRiyu2__c.field-meta.xml
<CustomField>
    <fullName>TaketsuRiyu2__c</fullName>
    <description>CAS用項目</description>
    <label>他決理由2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>営業不足</fullName>
            </value>
            <value>
                <fullName>ノータッチ</fullName>
            </value>
            <value>
                <fullName>人脈</fullName>
            </value>
            <value>
                <fullName>価格</fullName>
            </value>
            <value>
                <fullName>データ</fullName>
            </value>
            <value>
                <fullName>仕様</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>実績</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>