force-app/main/default/objects/OpportunityLineItem/fields/TaketsuTashaHinmei__c.field-meta.xml
<CustomField>
    <fullName>TaketsuTashaHinmei__c</fullName>
    <description>CAS用項目</description>
    <label>他決他社品名</label>
    <length>80</length>
    <type>Text</type>
</CustomField>