force-app/main/default/objects/OpportunityLineItem/fields/TaketsuTashamei__c.field-meta.xml
<CustomField>
    <fullName>TaketsuTashamei__c</fullName>
    <description>CAS用項目</description>
    <label>他決他社名</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>東芝</fullName>
            </value>
            <value>
                <fullName>日本電子</fullName>
            </value>
            <value>
                <fullName>ﾍﾞｯｸﾏﾝｺｰﾙﾀｰ</fullName>
            </value>
            <value>
                <fullName>シーメンス</fullName>
            </value>
            <value>
                <fullName>デイド</fullName>
            </value>
            <value>
                <fullName>RDKK</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>オリンパス</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>