force-app/main/default/objects/OpportunityLineItem/fields/TehaiAmountM__c.field-meta.xml
<CustomField>
    <fullName>TehaiAmountM__c</fullName>
    <formula>MC__c / 1000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>手配額 (M)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>