force-app/main/default/objects/OpportunityLineItem/fields/TehaiYoteiDate__c.field-meta.xml
<CustomField>
    <fullName>TehaiYoteiDate__c</fullName>
    <label>手配予定日</label>
    <type>Date</type>
</CustomField>