force-app/main/default/objects/OpportunityLineItem/fields/teikagoukei__c.field-meta.xml
<CustomField>
    <fullName>teikagoukei__c</fullName>
    <label>定価(合計)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>