force-app/main/default/objects/OpportunityLineItem/fields/teikatanka__c.field-meta.xml
<CustomField>
    <fullName>teikatanka__c</fullName>
    <label>定価(単価)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>