force-app/main/default/objects/OpportunityLineItem/fields/Tekiyo__c.field-meta.xml
<CustomField>
    <fullName>Tekiyo__c</fullName>
    <label>摘要</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>