force-app/main/default/objects/OpportunityLineItem/fields/TotalSaiteibaika__c.field-meta.xml
<CustomField>
    <fullName>TotalSaiteibaika__c</fullName>
    <label>最低売価(合計)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>