force-app/main/default/objects/OpportunityLineItem/fields/TotalSupplierAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalSupplierAmount__c</fullName>
    <label>仕入額(合計)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>