force-app/main/default/objects/OpportunityLineItem/fields/UnAddUpOpp__c.field-meta.xml
<CustomField>
    <fullName>UnAddUpOpp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>未計上商談</label>
    <type>Checkbox</type>
</CustomField>