force-app/main/default/objects/OpportunityLineItem/fields/UnitPrice_M__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice_M__c</fullName>
    <description>CAS用項目</description>
    <formula>ROUND( UnitPrice / 1000000 ,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>受注金額（M\）</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>