force-app/main/default/objects/OpportunityLineItem/fields/updateProductFlg__c.field-meta.xml
<CustomField>
    <fullName>updateProductFlg__c</fullName>
    <formula>IF( BEGINS( $Profile.Name ,&apos;HHS&apos;),
false, 
OR(
MC__c / Quantity &lt;&gt;  PricebookEntry.Product2.MC__c ,
Q__c / Quantity &lt;&gt;  PricebookEntry.Product2.Q__c ,
TC__c / Quantity &lt;&gt;  PricebookEntry.Product2.TC__c
)
)</formula>
    <label>製品マスタ更新フラグ</label>
    <type>Checkbox</type>
</CustomField>