force-app/main/default/objects/OpportunityLineItem/fields/ZaikoFlg__c.field-meta.xml
<CustomField>
    <fullName>ZaikoFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>在庫フラグ</label>
    <type>Checkbox</type>
</CustomField>