force-app/main/default/objects/OpportunityLineItem/fields/ZyuyoRemarks__c.field-meta.xml
<CustomField>
    <fullName>ZyuyoRemarks__c</fullName>
    <label>備考</label>
    <type>TextArea</type>
</CustomField>