force-app/main/default/objects/OpportunityLineItem/validationRules/DisplayedNameDependentOnProduct2.validationRule-meta.xml
<ValidationRule>
    <fullName>DisplayedNameDependentOnProduct2</fullName>
    <active>true</active>
    <description>If the product is not marked as &quot;Main&quot; then, the the Opportunity Product Displayed Name cannot be shown as &quot;Main&quot;.</description>
    <errorConditionFormula>AND(NOT( Product2.MainProduct__c  = True) ,   ISPICKVAL( ProductType__c , &quot;Main&quot;))</errorConditionFormula>
    <errorMessage>Related product is not marked as &quot;Main&quot;, therefore Opportunity Product cannot be marked as &quot;Main&quot;.</errorMessage>
</ValidationRule>