force-app/main/default/objects/OpportunityLineItem/validationRules/HacchuYoteiNengetsuCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>HacchuYoteiNengetsuCheck</fullName>
    <active>false</active>
    <errorConditionFormula>if ( LEN(HacchuYoteiNengetsu__c) &lt;&gt; 0,
	or ( 
		if(LEN(HacchuYoteiNengetsu__c) &lt;&gt; 7, true, false), 
		if(MID(HacchuYoteiNengetsu__c,5,1) &lt;&gt; &quot;/&quot;, 
			true, 
			if(VALUE(MID(HacchuYoteiNengetsu__c,1,4)) &lt;= 0,
				true,
				if(VALUE(MID(HacchuYoteiNengetsu__c,6,2)) &lt;= 0,
					true,
					if(VALUE(MID(HacchuYoteiNengetsu__c,6,2)) &gt;12,
						true,
						false
					)
				)
			)
		)
	),
	false
)</errorConditionFormula>
    <errorMessage>yyyy/mmで入力してください</errorMessage>
</ValidationRule>